
include Java;
include_class Java::org::dbtoaster::cumulus::net::SpreadException;
include_class Java::org::dbtoaster::cumulus::net::NetTypes;

MapEntry   = NetTypes::Entry;
PutField   = NetTypes::PutField;
PutParams  = NetTypes::PutParams;
PutRequest = NetTypes::PutRequest;
GetRequest = NetTypes::GetRequest;